--- a/home.html
+++ b/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>Home | Muhammed Gazi</title>
         <link rel="shortcut icon" href="images/logo.png" />
         <link rel="stylesheet" href="assest/home.css" />
