--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
         </div>
         
         <div class="ben">
-           <h1 class="student">A student also a coder</h1>
+           <h1 class="student" id="student">A student also a coder</h1>
             <img src="images/ben.jpg" /></a>
             
         </div>
