--- a/home.html
+++ b/home.html
@@ -61,11 +61,11 @@
         <div class="contact">
             <span>Contact Us!</span>
             <form action="https://formspree.io/f/xwkwawgj" method="POST">
-                <input class="name" type="text" required placeholder="Name" name="name">
+                <input class="name" type="text" required placeholder="Name" name="Name">
                 <label for="name"></label>
-                <input class="email" type="email" required placeholder="E-mail" name="e-mail">
+                <input class="email" type="email" required placeholder="E-mail" name="E-mail">
                 <label for="e-mail"></label>
-                <textarea name="textarea" placeholder="Message" rows="10"></textarea>
+                <textarea name="Message" placeholder="Message" rows="10"></textarea>
                 <input type="submit" class="submit-btn submit-btn-a" value="Send Message"/><input class="reset-btn"  value="+" type="reset" >
             </form>
             <div class="social-media">
